--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -175,7 +175,7 @@
         app:srcCompat="@drawable/kobbtext" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="회원가입"
