--- a/app/src/main/res/layout-land/activity_manage_main_page.xml
+++ b/app/src/main/res/layout-land/activity_manage_main_page.xml
@@ -111,7 +111,7 @@
                 app:srcCompat="@drawable/kobbtext" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="관리자 메뉴"
