--- a/app/src/main/res/layout/activity_join_success_page.xml
+++ b/app/src/main/res/layout/activity_join_success_page.xml
@@ -58,7 +58,7 @@
         app:srcCompat="@drawable/kobbtext" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
