--- a/app/src/main/res/layout/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout/activity_start_kiosk_page.xml
@@ -18,7 +18,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -105,7 +105,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
