--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -62,7 +62,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/btn_cart_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#F7F7F7"
@@ -75,7 +75,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="8dp"
-                app:layout_constraintStart_toEndOf="@+id/imageButton3"
+                app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
                 app:layout_constraintTop_toTopOf="@+id/guideline3"
                 app:srcCompat="@drawable/casher" />
 
@@ -90,11 +90,11 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/imageButton3"
+                app:layout_constraintStart_toStartOf="@+id/btn_cart_page"
                 app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btn_small_menu_page1"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="30dp"
@@ -108,7 +108,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btn_small_menu_page2"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="10dp"
@@ -117,13 +117,13 @@
                 android:text="라떼"
                 android:textColor="#F7F7F7"
                 android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/button5"
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page1"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/button5"
-                app:layout_constraintTop_toBottomOf="@+id/button5" />
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page1"
+                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page1" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btn_small_menu_page3"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="10dp"
@@ -132,12 +132,12 @@
                 android:text="차"
                 android:textColor="#F7F7F7"
                 android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/button6"
-                app:layout_constraintStart_toStartOf="@+id/button6"
-                app:layout_constraintTop_toBottomOf="@+id/button6" />
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2"
+                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page2" />
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/btn_small_menu_page5"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="10dp"
@@ -146,12 +146,12 @@
                 android:text="요거트"
                 android:textColor="#F7F7F7"
                 android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/button9"
-                app:layout_constraintStart_toStartOf="@+id/button9"
-                app:layout_constraintTop_toBottomOf="@+id/button9" />
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page4"
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page4"
+                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page4" />
 
             <Button
-                android:id="@+id/button9"
+                android:id="@+id/btn_small_menu_page4"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="12dp"
@@ -174,9 +174,9 @@
                 android:text="디저트"
                 android:textColor="#F7F7F7"
                 android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/button8"
-                app:layout_constraintStart_toStartOf="@+id/button8"
-                app:layout_constraintTop_toBottomOf="@+id/button8" />
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5"
+                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
