--- a/app/src/main/res/layout-land/activity_small_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page.xml
@@ -66,10 +66,10 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/btn_cart_page"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -84,7 +84,7 @@
                 android:layout_height="80dp"
                 android:layout_marginStart="5dp"
                 android:background="#FFEAEA"
-                app:layout_constraintStart_toEndOf="@+id/imageButton3"
+                app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
                 app:srcCompat="@drawable/casher" />
 
@@ -137,20 +137,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
             <ImageButton
-                android:id="@+id/btn_Hot_cold_page"
-                android:layout_width="220dp"
-                android:layout_height="220dp"
+                android:id="@+id/btn_Hot_cold_page1"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_marginStart="120dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView43"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
-                android:id="@+id/btn_Hot_cold_page"
-                android:layout_width="220dp"
-                android:layout_height="220dp"
-                android:layout_marginTop="50dp"
+                android:id="@+id/btn_Hot_cold_page2"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="120dp"
                 app:layout_constraintEnd_toEndOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView43"
@@ -160,27 +160,27 @@
                 android:id="@+id/button4"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
-                android:layout_marginStart="150dp"
-                android:layout_marginBottom="90dp"
+                android:layout_marginStart="270dp"
+                android:layout_marginBottom="56dp"
                 android:background="@drawable/btn_radius"
                 android:text="◀ 이전페이지"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page1" />
 
             <Button
                 android:id="@+id/button11"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
-                android:layout_marginEnd="150dp"
-                android:layout_marginBottom="90dp"
+                android:layout_marginEnd="270dp"
+                android:layout_marginBottom="56dp"
                 android:background="@drawable/btn_radius"
                 android:text="다음페이지 ▶"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
