--- a/app/src/main/res/layout/activity_pay_page.xml
+++ b/app/src/main/res/layout/activity_pay_page.xml
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/btn_cart_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#FFEAEA"
@@ -64,7 +64,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="300dp"
         android:background="#F7F7F7"
-        app:layout_constraintStart_toEndOf="@+id/imageButton3"
+        app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
         app:srcCompat="@drawable/casher" />
 
@@ -80,7 +80,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
+        app:layout_constraintStart_toStartOf="@+id/btn_cart_page"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <androidx.constraintlayout.widget.Guideline
