--- a/app/src/main/res/layout/activity_small_menu_page.xml
+++ b/app/src/main/res/layout/activity_small_menu_page.xml
@@ -56,7 +56,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/btn_cart_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -71,7 +71,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="300dp"
         android:background="#FFEAEA"
-        app:layout_constraintStart_toEndOf="@+id/imageButton3"
+        app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:srcCompat="@drawable/casher" />
 
@@ -124,7 +124,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <ImageButton
-        android:id="@+id/btn_Hot_cold_page"
+        android:id="@+id/btn_Hot_cold_page1"
         android:layout_width="400dp"
         android:layout_height="380dp"
         android:layout_marginStart="100dp"
@@ -134,7 +134,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
-        android:id="@+id/btn_Hot_cold_page"
+        android:id="@+id/btn_Hot_cold_page2"
         android:layout_width="400dp"
         android:layout_height="380dp"
         android:layout_marginTop="50dp"
@@ -154,7 +154,7 @@
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page1" />
 
     <Button
         android:id="@+id/button11"
@@ -167,7 +167,7 @@
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
