--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -165,7 +165,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/btn_small_menu_page6"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="10dp"
