윤정 8일 저녁 commit

--- a/app/src/main/res/layout-land/activity_control_inventory_page.xml
+++ b/app/src/main/res/layout-land/activity_control_inventory_page.xml
@@ -109,14 +109,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/kobbtext" />
             <!-- =============================================== -->
+
+            <!-- 페이징 라이브러리 -->
+
+
             <TableLayout
+                android:id="@+id/tableLayout2"
                 android:layout_width="900dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="100dp"
-                android:background="@drawable/table_outside"
                 android:stretchColumns="*"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -130,14 +134,18 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/table_inside"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/table_inside"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="메뉴이름"
                         android:textSize="24dp" />
@@ -145,7 +153,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:background="@drawable/table_inside"
                         android:gravity="center"
                         android:text="판매가격"
                         android:textSize="24dp" />
@@ -153,7 +160,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/table_inside"
                         android:gravity="center"
                         android:text="카테고리 분류"
                         android:textSize="24dp" />
@@ -161,7 +167,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/table_inside"
                         android:gravity="center"
                         android:text="상태"
                         android:textSize="24dp" />
@@ -169,22 +174,34 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/table_inside"
                         android:gravity="center"
                         android:text="메뉴 사진"
                         android:textSize="24dp" />
                 </TableRow>
 
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    <!-- 체크박스1 -->
+
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textSize="24dp" />
 
                     <TextView
                         android:id="@+id/textView48"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="1"
                         android:textSize="24dp" />
 
                     <TextView
@@ -208,24 +225,16 @@
                         android:gravity="center"
                         android:textSize="24dp" />
 
-                    <TextView
-                        android:id="@+id/textView52"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView58"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="24dp" />
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    <!-- 체크박스2 -->
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/textView53"
@@ -263,15 +272,167 @@
                         android:gravity="center"
                         android:textSize="24dp" />
 
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- 체크박스3 -->
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
                     <TextView
-                        android:id="@+id/textView59"
+                        android:id="@+id/textView60"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="3"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/textView61"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/textView62"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/textView63"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/textView64"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
                 </TableRow>
 
+
             </TableLayout>
+
+            <TextView
+                android:id="@+id/textView65"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="600dp"
+                android:layout_marginBottom="20dp"
+                android:text="판매량 높은 순"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+                app:layout_constraintStart_toStartOf="@+id/tableLayout2"
+                app:layout_constraintTop_toTopOf="@+id/textView66" />
+
+            <TextView
+                android:id="@+id/textView66"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:text="판매량 낮은 순"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+                app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
+                app:layout_constraintStart_toEndOf="@+id/textView65" />
+
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#FF5555"
+                android:text="선택항목 삭제"
+                android:textColor="#FAF7F7"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/button14"
+                app:layout_constraintStart_toStartOf="@+id/tableLayout2"
+                app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
+
+            <Button
+                android:id="@+id/button14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#FF5555"
+                android:text="저장"
+                android:textColor="#F4EEEE"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
+                app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
+
+            <Button
+                android:id="@+id/button15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#FF5555"
+                android:text="1"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button12"
+                app:layout_constraintEnd_toStartOf="@+id/button16"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/button18" />
+
+            <Button
+                android:id="@+id/button16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="#FF5555"
+                android:text="2"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button15"
+                app:layout_constraintEnd_toStartOf="@+id/button17"
+                app:layout_constraintTop_toTopOf="@+id/button15"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/button17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="190dp"
+                android:backgroundTint="#FF5555"
+                android:text="3"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button16"
+                app:layout_constraintEnd_toStartOf="@+id/button14"
+                app:layout_constraintTop_toTopOf="@+id/button16"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/button18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="140dp"
+                android:backgroundTint="#FF5555"
+                android:text="◀"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button15"
+                app:layout_constraintStart_toEndOf="@+id/button12"
+                app:layout_constraintTop_toTopOf="@+id/button15" />
+
+            <Button
+                android:id="@+id/button19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="100dp"
+                android:backgroundTint="#FF5555"
+                android:text="▶"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button17"
+                app:layout_constraintEnd_toStartOf="@+id/button14"
+                app:layout_constraintTop_toTopOf="@+id/button17" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
