--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -121,24 +121,23 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="100dp"
-                android:backgroundTint="#FF5555"
+                android:background="@drawable/eat2"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                tools:srcCompat="@drawable/eat2" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <ImageButton
                 android:id="@+id/btn_TakeOut_main_menu_page"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginEnd="100dp"
-                android:backgroundTint="#FF5555"
                 android:scaleType="fitXY"
+                android:background="@drawable/takeout2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                tools:srcCompat="@drawable/takeout2" />
+                 />
 
             <ImageView
                 android:id="@+id/imageView13"
