--- a/app/src/main/res/layout-land/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout-land/activity_hot_cold_page.xml
@@ -121,7 +121,7 @@
                             app:layout_constraintTop_toTopOf="@+id/textView" />
 
                         <TextView
-                            android:id="@+id/textView19"
+                            android:id="@+id/chname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
