--- a/app/src/main/res/layout/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout/activity_choice_pay_page.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@drawable/kobbicon" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvmenu"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
