--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -155,7 +155,7 @@
                 app:layout_constraintTop_toTopOf="@+id/textView25" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_cash"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#FFFFFF"
@@ -167,7 +167,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView79" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_kakao"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#FFFFFF"
