--- a/app/src/main/res/layout-land/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout-land/activity_choice_pay_page.xml
@@ -120,7 +120,7 @@
                 app:srcCompat="@drawable/shopping_cart" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_card"
                 android:layout_width="301dp"
                 android:layout_height="161dp"
                 android:layout_marginStart="20dp"
@@ -139,7 +139,7 @@
 
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_cash"
                 android:layout_width="301dp"
                 android:layout_height="161dp"
                 android:layout_marginStart="40dp"
@@ -149,11 +149,11 @@
                 android:text="현금결제"
                 android:textColor="#F7F7F7"
                 android:textSize="34sp"
-                app:layout_constraintStart_toEndOf="@+id/button"
+                app:layout_constraintStart_toEndOf="@+id/btn_card"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_kakao"
                 android:layout_width="300dp"
                 android:layout_height="161dp"
                 android:layout_marginStart="20dp"
@@ -168,10 +168,10 @@
                 android:textColor="#F7F7F7"
                 android:textSize="28sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_card" />
 
             <Button
-                android:id="@+id/button13"
+                android:id="@+id/btn_payco"
                 android:layout_width="300dp"
                 android:layout_height="161dp"
                 android:layout_marginStart="40dp"
@@ -185,8 +185,8 @@
                 android:text="페이코"
                 android:textColor="#F7F7F7"
                 android:textSize="34sp"
-                app:layout_constraintStart_toEndOf="@+id/button3"
-                app:layout_constraintTop_toBottomOf="@+id/button2" />
+                app:layout_constraintStart_toEndOf="@+id/btn_kakao"
+                app:layout_constraintTop_toBottomOf="@+id/btn_cash" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
