--- a/app/src/main/res/layout-land/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout-land/activity_start_kiosk_page.xml
@@ -54,7 +54,7 @@
                 app:srcCompat="@drawable/kobbicon" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_card"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="16dp"
