--- a/app/src/main/res/layout/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout/activity_choice_pay_page.xml
@@ -112,7 +112,7 @@
         app:srcCompat="@drawable/shopping_cart" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_card"
         android:layout_width="200dp"
         android:layout_height="161dp"
         android:layout_marginStart="100dp"
@@ -131,7 +131,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_cash"
         android:layout_width="200dp"
         android:layout_height="161dp"
         android:layout_marginTop="60dp"
@@ -145,7 +145,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_kakao"
         android:layout_width="200dp"
         android:layout_height="161dp"
         android:layout_marginStart="100dp"
@@ -160,10 +160,10 @@
         android:textColor="#F7F7F7"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_card" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/btn_payco"
         android:layout_width="200dp"
         android:layout_height="161dp"
         android:layout_marginTop="40dp"
@@ -178,6 +178,6 @@
         android:textColor="#F7F7F7"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_cash" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
