--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -332,7 +332,7 @@
                 android:background="#F7F7F7"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/shopping_cart" />
+                app:srcCompat="@drawable/shoppingcart" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
