--- a/app/src/main/res/layout-land/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout-land/activity_choice_pay_page.xml
@@ -117,7 +117,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/guideline3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/shopping_cart" />
+                app:srcCompat="@drawable/shoppingcart" />
 
             <Button
                 android:id="@+id/btn_card"
