--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -7,176 +7,243 @@
     android:backgroundTint="#FFFFFF"
     tools:context=".Main_menu_page">
 
-
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:scrollbarAlwaysDrawHorizontalTrack="false">
+
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline3"
+                android:id="@+id/guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.1" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="110dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/kobbicon" />
+                app:layout_constraintGuide_percent="0.10218978" />
 
             <TextView
-                android:id="@+id/tvmenu"
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#FFEAEA"
+                android:gravity="center_horizontal"
+                android:textColor="#504E4E"
+                android:textSize="24dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <!-- 뚜껑 상호명-->
+            <TextView
+                android:id="@+id/tvname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:text="상호명"
-                android:textColor="#FF5555"
-                android:textSize="16dp"
+                android:textColor=" #FF5555"
+                android:textSize="34sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/guideline3"
-                app:layout_constraintStart_toEndOf="@+id/imageView4"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="#F7F7F7"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline3"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <ImageButton
-                android:id="@+id/btn_cart_page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#F7F7F7"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline3"
-                app:srcCompat="@drawable/back" />
-
             <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
-                app:layout_constraintTop_toTopOf="@+id/guideline3"
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="#FEE9E9"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toTopOf="@+id/guideline"
                 app:srcCompat="@drawable/casher" />
 
             <TextView
-                android:id="@+id/textView10"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:gravity="center"
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="어떤 메뉴를 주문할까요?"
                 android:textColor="#504E4E"
-                android:textSize="25dp"
+                android:textSize="46sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/btn_cart_page"
-                app:layout_constraintTop_toTopOf="@+id/guideline3" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:srcCompat="@drawable/kobbtext" />
+
 
             <Button
                 android:id="@+id/btn_small_menu_page1"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="12dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginBottom="30dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="커피"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/btn_small_menu_page2"
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2" />
 
             <Button
                 android:id="@+id/btn_small_menu_page2"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="라떼"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page1"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page1"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page1" />
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
+                app:layout_constraintEnd_toStartOf="@+id/guideline8"
+                app:layout_constraintHorizontal_bias="0.694"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
             <Button
                 android:id="@+id/btn_small_menu_page3"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="96dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="차"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2"
                 app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page2" />
 
             <Button
                 android:id="@+id/btn_small_menu_page5"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="50dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="요거트"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page4"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page4"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page4" />
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline8"
+                app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
             <Button
                 android:id="@+id/btn_small_menu_page4"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="30dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginBottom="30dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="에이드"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/btn_small_menu_page5"
+                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
+                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5" />
 
             <Button
                 android:id="@+id/btn_small_menu_page6"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="400dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="96dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="디저트"
                 android:textColor="#F7F7F7"
-                android:textSize="30dp"
+                android:textSize="48sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5"
                 app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page5" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="736dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="222dp" />
+
+            <!-- 뚜껑 쇼핑카드 -->
+            <ImageButton
+                android:id="@+id/btn_cart_page3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="500dp"
+                android:layout_marginTop="11dp"
+                android:backgroundTint="#00FFFFFF"
+                app:layout_constraintBottom_toTopOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/tvname"
+                app:layout_constraintTop_toTopOf="@+id/tvname"
+                app:srcCompat="@drawable/shoppingcart" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_style"
+                android:backgroundTint="#FBD7D7"
+                android:text="뒤로 가기"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
+                app:layout_constraintTop_toTopOf="@+id/btn_cart_page3" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
