--- a/app/src/main/res/layout-land/activity_manage_main_page.xml
+++ b/app/src/main/res/layout-land/activity_manage_main_page.xml
@@ -7,13 +7,52 @@
     android:backgroundTint="#FFFFFF"
     tools:context=".Manage_main_page">
 
+    <ImageButton
+        android:id="@+id/btn_User_info_page1"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="#FFFFFF"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/user" />
+
+    <Button
+        android:id="@+id/btn_Start_kiosk_page"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#FF5555"
+        android:text="모드전환"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page1"
+        app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page1"
+        app:layout_constraintTop_toTopOf="@+id/btn_User_info_page1" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="220dp"
+        android:layout_height="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/kobbicon" />
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,22 +66,12 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.1" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="220dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/kobbicon" />
-
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9" />
+                app:layout_constraintGuide_end="80dp" />
 
             <TextView
                 android:id="@+id/textView"
@@ -77,36 +106,25 @@
                 android:id="@+id/btn_Control_inventory_page"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:text="재고 관리"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView2"
-                app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
+                android:textColor="#F7F7F7"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/btn_Control_menu_page"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Control_menu_page"
-                app:layout_constraintVertical_bias="0.214" />
-
-            <ImageButton
-                android:id="@+id/btn_User_info_page1"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginEnd="16dp"
-                android:background="#FFFFFF"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user" />
+                app:layout_constraintStart_toStartOf="@+id/btn_Control_menu_page"
+                app:layout_constraintTop_toBottomOf="@+id/btn_Control_menu_page" />
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/btn_Control_kiosk_page"
+                app:layout_constraintStart_toStartOf="@+id/btn_Control_kiosk_page"
                 app:layout_constraintTop_toTopOf="@+id/guideline2"
                 app:srcCompat="@drawable/kobbtext" />
 
@@ -124,28 +142,18 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <Button
-                android:id="@+id/btn_Start_kiosk_page"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="#FF5555"
-                android:text="모드전환"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page1"
-                app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page1"
-                app:layout_constraintTop_toTopOf="@+id/btn_User_info_page1" />
-
-            <Button
                 android:id="@+id/btn_Sales_condition_page"
                 android:layout_width="500dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="52dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:text="매출 현황"
-                android:textSize="20sp"
+                android:textColor="#F7F7F7"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -154,28 +162,34 @@
                 android:id="@+id/btn_Control_menu_page"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:text="메뉴 관리"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                android:textColor="#F7F7F7"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Sales_condition_page"
-                app:layout_constraintVertical_bias="0.147" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_Sales_condition_page" />
 
             <Button
                 android:id="@+id/btn_Control_kiosk_page"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:text="키오스크 관리"
-                android:textSize="20sp"
+                android:textColor="#F7F7F7"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView2"
-                app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
+                app:layout_constraintEnd_toEndOf="@+id/btn_Control_inventory_page"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
+                app:layout_constraintStart_toStartOf="@+id/btn_Control_inventory_page"
                 app:layout_constraintTop_toBottomOf="@+id/btn_Control_inventory_page" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
