--- a/app/src/main/res/layout-land/activity_pay_page.xml
+++ b/app/src/main/res/layout-land/activity_pay_page.xml
@@ -109,7 +109,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/shopping_cart" />
+        app:srcCompat="@drawable/shoppingcart" />
 
     <TextView
         android:id="@+id/textView16"
