--- a/app/src/main/res/layout-land/activity_small_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page.xml
@@ -4,21 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".small_menu_page">
+    android:backgroundTint="#FFFFFF"
+    tools:context=".Main_menu_page">
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-
+<!-- 뚜껑 시작 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:scrollbarAlwaysDrawHorizontalTrack="false">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
@@ -26,32 +30,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.10218978" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="220dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:maxWidth="35dp"
-                android:maxHeight="35dp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/kobbicon" />
-
-            <Button
-                android:id="@+id/btn_Mode_change_page"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:layout_marginEnd="8dp"
-                android:backgroundTint="#FF5555"
-                android:text="모드 전환"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
 
             <TextView
                 android:id="@+id/textView"
@@ -61,32 +39,12 @@
                 android:gravity="center_horizontal"
                 android:textColor="#504E4E"
                 android:textSize="24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <ImageButton
-                android:id="@+id/btn_cart_page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:background="#FFEAEA"
-                app:layout_constraintStart_toStartOf="@+id/textView26"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:srcCompat="@drawable/back" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="5dp"
-                android:background="#FFEAEA"
-                app:layout_constraintStart_toEndOf="@+id/btn_cart_page"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:srcCompat="@drawable/casher" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tvname"
@@ -95,105 +53,169 @@
                 android:gravity="center"
                 android:text="상호명"
                 android:textColor=" #FF5555"
-                android:textSize="20sp"
+                android:textSize="34sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toEndOf="@+id/btn_Mode_change_page"
-                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toTopOf="@+id/textView5"
+                app:srcCompat="@drawable/casher" />
+
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="커피류를 선택하셨습니다."
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.499"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvname" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="어떤 커피로 드시겠어요?"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:srcCompat="@drawable/kobbtext" />
 
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline2"
+                android:id="@+id/guideline8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9" />
+                app:layout_constraintGuide_begin="736dp" />
 
-            <TextView
-                android:id="@+id/textView26"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="커피류를 선택하셨습니다."
-                android:textColor="#504E4E"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline" />
-
-            <TextView
-                android:id="@+id/textView43"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline10"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="222dp" />
+
+            <ImageButton
+                android:id="@+id/btn_cart_page3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="500dp"
+                android:layout_marginTop="11dp"
+                android:backgroundTint="#00FFFFFF"
+                app:layout_constraintBottom_toTopOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/tvname"
+                app:layout_constraintTop_toTopOf="@+id/tvname"
+                app:srcCompat="@drawable/shoppingcart" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
+                android:layout_marginStart="160dp"
+                android:layout_marginBottom="100dp"
+                android:backgroundTint="#FFFFFF"
+                android:drawableTop="@drawable/coffee1_small_menu"
                 android:gravity="center"
-                android:text="어떤 커피를 드시겠어요?"
-                android:textColor="#504E4E"
-                android:textSize="20sp"
+                android:text="아인슈패너     4,000원"
+                android:textColor="#000000"
+                android:textSize="50dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button5" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#FFFFFF"
+                android:drawableTop="@drawable/coffee1_small_menu"
+                android:gravity="center"
+                android:text="까페모카        4,000원"
+                android:textColor="#000000"
+                android:textSize="50dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView26" />
+                app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-            <ImageButton
-                android:id="@+id/btn_Hot_cold_page1"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView43"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <ImageButton
-                android:id="@+id/btn_Hot_cold_page2"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="120dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/textView43"
-                tools:srcCompat="@tools:sample/avatars" />
+            <!-- 뚜껑 끝 -->
 
             <Button
-                android:id="@+id/button4"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="270dp"
-                android:layout_marginBottom="56dp"
-                android:background="@drawable/btn_radius"
-                android:text="◀ 이전페이지"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page1" />
+                android:id="@+id/btn_Customer_main_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="175dp"
+                android:backgroundTint="#FF5555"
+                android:text="◀ 이전 페이지"
+                android:textColor="#FFFFFF"
+                android:textSize="32dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
+                app:layout_constraintStart_toStartOf="@+id/button3"
+                app:layout_constraintTop_toBottomOf="@+id/button3" />
 
             <Button
-                android:id="@+id/button11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="175dp"
+                android:backgroundTint="#FF5555"
+                android:text="다음 페이지 ▶"
+                android:textColor="#FFFFFF"
+                android:textSize="32dp"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Customer_main_page"
+                app:layout_constraintStart_toEndOf="@+id/btn_Customer_main_page"
+                app:layout_constraintTop_toTopOf="@+id/btn_Customer_main_page" />
+
+            <Button
+                android:id="@+id/button7"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
-                android:layout_marginEnd="270dp"
-                android:layout_marginBottom="56dp"
-                android:background="@drawable/btn_radius"
-                android:text="다음페이지 ▶"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_style"
+                android:backgroundTint="#FBD7D7"
+                android:text="뒤로 가기"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_cart_page3"
+                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
+                app:layout_constraintTop_toTopOf="@+id/btn_cart_page3" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
