--- a/app/src/main/res/layout-land/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout-land/activity_start_kiosk_page.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="110dp"
+                android:layout_width="220dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:maxWidth="35dp"
@@ -72,10 +72,24 @@
                 app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/button_style"
+                android:backgroundTint="#FBD7D7"
+                android:text="뒤로 가기"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintTop_toTopOf="@+id/button" />
+
             <ImageButton
                 android:id="@+id/imageButton4"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginEnd="8dp"
                 android:background="#FFFFFF"
                 android:scaleType="fitXY"
@@ -84,39 +98,30 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/user" />
 
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginBottom="20dp"
                 android:background="#FBF8F8"
                 android:gravity="center_horizontal"
                 android:text="고객모드"
                 android:textColor="#504E4E"
-                android:textSize="24dp"
-                app:layout_constraintBottom_toTopOf="@+id/imageView15"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <ImageButton
-                android:id="@+id/imageButton5"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="#F7F7F7"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:srcCompat="@drawable/back" />
-
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="65dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="65dp"
                 android:layout_marginBottom="80dp"
                 android:background="#FFEAEA"
@@ -154,6 +159,7 @@
                 android:text="2023년 00월 00일 00시 00분 00초"
                 android:textColor="#F7F7F7"
                 android:textSize="50sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -166,6 +172,7 @@
                 android:text="(매장명)"
                 android:textColor="#F7F7F7"
                 android:textSize="50sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView3"
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView69" />
@@ -191,6 +198,7 @@
                 android:text="오늘 영업을 시작할까요?"
                 android:textColor="#F7F7F7"
                 android:textSize="50sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/textView69"
                 app:layout_constraintStart_toStartOf="@+id/textView69"
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
@@ -206,7 +214,8 @@
                 app:layout_constraintEnd_toEndOf="@+id/textView73"
                 app:layout_constraintHorizontal_bias="0.481"
                 app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+                app:layout_constraintTop_toBottomOf="@+id/textView73"
+                android:textStyle="bold" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline8"
@@ -221,9 +230,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/textView2"
+                app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:srcCompat="@drawable/kobbtext" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="80dp" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
