--- a/app/src/main/res/layout/activity_check_menu_page.xml
+++ b/app/src/main/res/layout/activity_check_menu_page.xml
@@ -115,7 +115,7 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/shopping_cart1" />
+                app:srcCompat="@drawable/shoppingcart" />
 
             <TextView
                 android:id="@+id/textView17"
