--- a/app/src/main/res/layout/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout/activity_hot_cold_page.xml
@@ -100,7 +100,7 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/shopping_cart1" />
+                app:srcCompat="@drawable/shoppingcart" />
 
             <Button
                 android:id="@+id/btn_btn_Check_menu_page"
